fixed track list async calls

--- a/app/src/main/res/layout/fragment_top_artist_tracks.xml
+++ b/app/src/main/res/layout/fragment_top_artist_tracks.xml
@@ -4,4 +4,5 @@
         android:id="@+id/rclr_tracks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/track_prototype" />
+        tools:listitem="@layout/track_prototype"
+        android:scrollbars="vertical" />
