--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintVertical_bias="0.939"
-            app:showFullScreenButton="true"
+            app:showFullScreenButton="false"
             app:videoId="" />
 
 
