--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:indeterminate="true"
+            android:maxHeight="30dp"
+            android:minHeight="30dp"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/youtube_player_view"
             app:layout_constraintEnd_toEndOf="@+id/vp_main"
